sem_2.err
/var/spool/slurmd/job20806405/slurm_script: line 12: ml: command not found
/var/spool/slurmd/job20806405/slurm_script: line 13: ml: command not found
/var/spool/slurmd/job20806405/slurm_script: line 14: ml: command not found
/var/spool/slurmd/job20806405/slurm_script: line 15: ml: command not found
/var/spool/slurmd/job20806405/slurm_script: line 16: module: command not found
/var/spool/slurmd/job20806405/slurm_script: line 17: activate: No such file or directory
  File "s3_sem.py", line 167
    print(f"Time taken for lat {lat_i} is {(time.time()-strt_time):.2f} seconds.")
                                                                                ^
SyntaxError: invalid syntax
slurmstepd: error: *** JOB 20806404 ON node001 CANCELLED AT 2022-08-28T22:01:15 DUE TO TIME LIMIT ***
